src/style.css
@import "kg.css";

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .moegi-header-in-post-view .moegi-header-brand .logo {
    @apply hidden sm:block;
  }
  .moegi-header-in-post-view .moegi-header-brand .home-icon {
    @apply block sm:hidden;
  }
  .moegi-header-in-post-view .moegi-header-title {
    @apply block opacity-100 translate-x-0;
  }

  .moegi-header-menu-open+.moegi-navigation-mpanel {
    @apply h-auto;
  }
  .moegi-header-menu-open+.moegi-navigation-mpanel .panel {
    @apply translate-y-0;
  }
  .moegi-header-menu-open #moegi-header-menu-icon .icon-menu {
    @apply hidden;
  }
  .moegi-header-menu-open #moegi-header-menu-icon .icon-x {
    @apply inline;
  }
  .ghost-article {
    /* a */
    @apply prose-a:no-underline prose-a:underline-offset-4;
    @apply hover:prose-a:underline;
    @apply prose-a:text-main;
    /* figcaption */
    @apply prose-figcaption:text-center;
  }
}

:root {
  scrollbar-color: #e9e9e9 #ffffff;
  scrollbar-width: thin;
  scrollbar-gutter: stable both;
}

::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}
::-webkit-scrollbar-thumb {
  background-color: #e9e9e9;
  border-radius: 4px;
}
::-webkit-scrollbar-thumb:hover {
  background-color: #cccccc;
}
::-webkit-scrollbar-track {
  background-color: #ffffff;
}

